Add swagger sample
